Use  Files.writeString() method introduced in Java 11